--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Practicing Github</h1>
-</body>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <h1 class="main-heading">Practicing Github</h1>
+  </body>
 </html>
