--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1 class="main-heading">Practicing Github</h1>
+    <p class="text">I am practicing Github today</p>
   </body>
 </html>
